--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^3.0.0"
 requests = "^2.31.0"
 pydantic = {extras = ["email"], version = "^2.5.1"}
 flask-pydantic = "^0.11.0"
+flask-wtf = "^1.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
